syntax = "proto3";

package greet;

option go_package="github.com/sandeepchowdary7/go-grpc/greet/proto";

message GreetRequest {
  string firstName=1;
  string lastName=2;
}

message GreetResponse {
  string fullName=1;
}

service GreetService {
  rpc Name(GreetRequest) returns (GreetResponse);
}
